added map on detail page

--- a/package.json
+++ b/package.json
@@ -15,20 +15,26 @@
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.8.0",
     "@mui/x-date-pickers": "^8.8.0",
+    "@react-google-maps/api": "^2.20.7",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.7.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
